<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name1">用户名</string>
    <string name="button1">确定</string>
    <string name="button2">取消</string>
    <string name="name2">用户名</string>
    <string name="button3">确定</string>
    <string name="button4">取消</string>
    <string name="name3">用户名</string>
    <string name="button5">确定</string>
    <string name="button6">取消</string>

</resources>